bitsandbytes/bnb/tests/ui/bin_enum_catch_all_temp_tag.stderr
error: the `#[catch_all]` first field holds the captured discriminant, so it can't be `#[br(temp)]`
  --> tests/ui/bin_enum_catch_all_temp_tag.rs:11:9
   |
11 | /         #[br(temp)]
12 | |         #[bw(calc = 0u8)]
13 | |         magic: u8,
   | |_________________^
